// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`patterns Renders \`patterns\` corporate tab with permissions 1`] = `
<div>
  <c-page-header-stub>
    Patterns
  </c-page-header-stub>
  <div
    class="layout row wrap"
  >
    <div
      class="flex xs12"
    >
      <div
        class="ma-2 v-card v-sheet theme--light"
      >
        <div
          class="v-tabs"
        >
          <div
            class="v-tabs__bar theme--light"
          >
            <transition-stub
              name="fade-transition"
            />
            <div
              class="v-tabs__wrapper"
            >
              <div
                class="v-tabs__container v-tabs__container--fixed-tabs"
              >
                <div
                  class="v-tabs__slider-wrapper"
                  style="transition: none;"
                >
                  <div
                    class="v-tabs__slider primary"
                  />
                </div>
                <div
                  class="v-tabs__div"
                >
                  <a
                    class="v-tabs__item"
                    href="#patterns"
                  >
                    My patterns
                  </a>
                </div>
                <div
                  class="v-tabs__div"
                >
                  <a
                    class="v-tabs__item v-tabs__item--active"
                    href="#corporatePatterns"
                  >
                    Shared patterns
                  </a>
                </div>
              </div>
            </div>
            <transition-stub
              name="fade-transition"
            />
          </div>
          <div
            class="v-window"
          >
            <div
              class="v-window__container"
            >
              <transition-stub
                name="v-window-x-transition"
              >
                <div
                  class="v-window-item"
                  style="display: none;"
                >
                  <patterns-stub />
                </div>
              </transition-stub>
              <transition-stub
                name="v-window-x-transition"
              >
                <div
                  class="v-window-item"
                  style=""
                >
                  <corporate-patterns-stub />
                </div>
              </transition-stub>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <c-fab-expand-btn-stub
    has-access="true"
  >
    <span
      class="v-tooltip v-tooltip--top"
    >
      <transition-stub
        name="slide-y-reverse-transition"
      />
      <span>
        <button
          class="v-btn v-btn--floating v-btn--small theme--dark grey darken-1"
          type="button"
        >
          <div
            class="v-btn__content"
          >
            <i
              aria-hidden="true"
              class="v-icon material-icons theme--dark"
            >
              pause
            </i>
          </div>
        </button>
      </span>
    </span>
    <span
      class="v-tooltip v-tooltip--top"
    >
      <transition-stub
        name="slide-y-reverse-transition"
      />
      <span>
        <button
          class="v-btn v-btn--floating v-btn--small theme--dark blue"
          type="button"
        >
          <div
            class="v-btn__content"
          >
            <i
              aria-hidden="true"
              class="v-icon material-icons theme--dark"
            >
              perm_identity
            </i>
          </div>
        </button>
      </span>
    </span>
    <span
      class="v-tooltip v-tooltip--top"
    >
      <transition-stub
        name="slide-y-reverse-transition"
      />
      <span>
        <button
          class="v-btn v-btn--floating v-btn--small theme--dark error"
          type="button"
        >
          <div
            class="v-btn__content"
          >
            <i
              aria-hidden="true"
              class="v-icon material-icons theme--dark"
            >
              notification_important
            </i>
          </div>
        </button>
      </span>
    </span>
  </c-fab-expand-btn-stub>
</div>
`;

exports[`patterns Renders \`patterns\` with permissions 1`] = `
<div>
  <c-page-header-stub>
    Patterns
  </c-page-header-stub>
  <div
    class="layout row wrap"
  >
    <div
      class="flex xs12"
    >
      <div
        class="ma-2 v-card v-sheet theme--light"
      >
        <div
          class="v-tabs"
        >
          <div
            class="v-tabs__bar theme--light"
          >
            <transition-stub
              name="fade-transition"
            />
            <div
              class="v-tabs__wrapper"
            >
              <div
                class="v-tabs__container v-tabs__container--fixed-tabs"
              >
                <div
                  class="v-tabs__slider-wrapper"
                  style="transition: none;"
                >
                  <div
                    class="v-tabs__slider primary"
                  />
                </div>
                <div
                  class="v-tabs__div"
                >
                  <a
                    class="v-tabs__item v-tabs__item--active"
                    href="#patterns"
                  >
                    My patterns
                  </a>
                </div>
                <div
                  class="v-tabs__div"
                >
                  <a
                    class="v-tabs__item"
                    href="#corporatePatterns"
                  >
                    Shared patterns
                  </a>
                </div>
              </div>
            </div>
            <transition-stub
              name="fade-transition"
            />
          </div>
          <div
            class="v-window"
          >
            <div
              class="v-window__container"
            >
              <transition-stub
                name=""
              >
                <div
                  class="v-window-item"
                >
                  <patterns-stub />
                </div>
              </transition-stub>
              <transition-stub
                name=""
              >
                <div
                  class="v-window-item"
                  style="display: none;"
                />
              </transition-stub>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <c-fab-expand-btn-stub
    has-access="true"
  >
    <span
      class="v-tooltip v-tooltip--top"
    >
      <transition-stub
        name="slide-y-reverse-transition"
      />
      <span>
        <button
          class="v-btn v-btn--floating v-btn--small theme--dark grey darken-1"
          type="button"
        >
          <div
            class="v-btn__content"
          >
            <i
              aria-hidden="true"
              class="v-icon material-icons theme--dark"
            >
              pause
            </i>
          </div>
        </button>
      </span>
    </span>
    <span
      class="v-tooltip v-tooltip--top"
    >
      <transition-stub
        name="slide-y-reverse-transition"
      />
      <span>
        <button
          class="v-btn v-btn--floating v-btn--small theme--dark blue"
          type="button"
        >
          <div
            class="v-btn__content"
          >
            <i
              aria-hidden="true"
              class="v-icon material-icons theme--dark"
            >
              perm_identity
            </i>
          </div>
        </button>
      </span>
    </span>
    <span
      class="v-tooltip v-tooltip--top"
    >
      <transition-stub
        name="slide-y-reverse-transition"
      />
      <span>
        <button
          class="v-btn v-btn--floating v-btn--small theme--dark error"
          type="button"
        >
          <div
            class="v-btn__content"
          >
            <i
              aria-hidden="true"
              class="v-icon material-icons theme--dark"
            >
              notification_important
            </i>
          </div>
        </button>
      </span>
    </span>
  </c-fab-expand-btn-stub>
</div>
`;

exports[`patterns Renders \`patterns\` without permissions 1`] = `
<div>
  <c-page-header-stub>
    Patterns
  </c-page-header-stub>
  <div
    class="layout row wrap"
  >
    <div
      class="flex xs12"
    >
      <div
        class="ma-2 v-card v-sheet theme--light"
      >
        <patterns-stub />
      </div>
    </div>
  </div>
  <c-fab-expand-btn-stub
    has-access="true"
  >
    <span
      class="v-tooltip v-tooltip--top"
    >
      <transition-stub
        name="slide-y-reverse-transition"
      />
      <span>
        <button
          class="v-btn v-btn--floating v-btn--small theme--dark grey darken-1"
          type="button"
        >
          <div
            class="v-btn__content"
          >
            <i
              aria-hidden="true"
              class="v-icon material-icons theme--dark"
            >
              pause
            </i>
          </div>
        </button>
      </span>
    </span>
    <span
      class="v-tooltip v-tooltip--top"
    >
      <transition-stub
        name="slide-y-reverse-transition"
      />
      <span>
        <button
          class="v-btn v-btn--floating v-btn--small theme--dark blue"
          type="button"
        >
          <div
            class="v-btn__content"
          >
            <i
              aria-hidden="true"
              class="v-icon material-icons theme--dark"
            >
              perm_identity
            </i>
          </div>
        </button>
      </span>
    </span>
    <span
      class="v-tooltip v-tooltip--top"
    >
      <transition-stub
        name="slide-y-reverse-transition"
      />
      <span>
        <button
          class="v-btn v-btn--floating v-btn--small theme--dark error"
          type="button"
        >
          <div
            class="v-btn__content"
          >
            <i
              aria-hidden="true"
              class="v-icon material-icons theme--dark"
            >
              notification_important
            </i>
          </div>
        </button>
      </span>
    </span>
  </c-fab-expand-btn-stub>
</div>
`;
